--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -181,3 +181,16 @@ button:disabled {
     font-weight: 300;
     padding: 12px 24px 0 24px;
 }
+
+
+@media screen and (max-width: 600px)
+{
+    .centered-form__box {
+        box-shadow: 0px 0px 17px 1px #1D1F26;
+        background: #F7F7FA;
+        padding: 24px;
+        width: 100%;
+        height: 100%;
+    }
+
+}
