--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -185,12 +185,28 @@ button:disabled {
 
 @media screen and (max-width: 600px)
 {
+    .centered-form {
+        background: #333744;
+        /* width: 100vw;
+        height: 100vh;    */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+    }
     .centered-form__box {
         box-shadow: 0px 0px 17px 1px #1D1F26;
         background: #F7F7FA;
         padding: 24px;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
+    }
+
+    label {
+        display: block;
+        font-size: 28px;
+        margin-bottom: 8px;
+        color: #777;
     }
 
 }
